--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="../../common/table.css">
     <link rel="stylesheet" href="localStores.css">
+    <link rel="stylesheet" href="../../common/navBar.css">
 
 </head>
 <body>
@@ -48,26 +49,7 @@
         </div>
     </div>
 </nav>
-<!--<nav class="navbar fixed-top navbar-dark  navbar-expand-lg navbar-dark bg-dark ">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" id="firstBtnText" href="#"></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="secondBtnText" href="#"></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="thirdBtnText" href="#"></a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" id="userNameText" href="#"></a>
-            </li>
-        </ul>
-    </div>
-</nav>-->
+
     <div class="row">
         <div class="col-lg-9">
             <h1>item list</h1>
