zone page working

--- a/SDM_webApp/web/pages/signup/signup.html
+++ b/SDM_webApp/web/pages/signup/signup.html
@@ -11,13 +11,13 @@
     <script src="signup.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/js/bootstrap.js">
+    <link rel="stylesheet" href="singup.css">
     <!-- Link jQuery JavaScript library in order to use the $ (jQuery) method-->
 
     <!-- and\or any other scripts you might need to operate the JSP file behind the scene once it arrives to the client-->
 </head>
 <body>
-<div class=”row align-items-center”>
-    <div class= ”col-6”>
+    <div class="form">
         <form method="GET" action="login" class="form-signin col-4 align-self-center">
                 <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                 <label type ="text" class="sr-only">Enter your name</label>
@@ -33,6 +33,5 @@
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div>
-</div>
 </body>
 </html>
