working on cart

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
@@ -121,6 +121,21 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td id="nameOfProd1">name of a prod</td>
+                                    <td>34<input class="btn btn-primary addBtn  float-right" type="button" value="Add" id="btnID1"><input  type="number" maxlength="2"  name="username" id="amountInput1" class="form-control float-right amountText"></td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td id="nameOfProd2">name</td>
+                                    <td>34<input class="btn btn-primary addBtn  float-right" type="button" value="Add" id="btnID2"><input  type="number" maxlength="2"  name="username" id="amountInput2" class="form-control float-right amountText"></td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td id="nameOfProd3">name of a prod</td>
+                                    <td>34 <input class="btn btn-primary addBtn  float-right" type="button" value="Add" id="btnID3"><input  type="number" maxlength="2"  name="username" id="amountInput3" class="form-control float-right amountText"></td>
+                                </tr>
                             </tbody>
                         </table>
                 </div>
