working on feedback.js

--- a/SDM_webApp/web/pages/loginerror/loginError.html
+++ b/SDM_webApp/web/pages/loginerror/loginError.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h2>User already in the system</h2>
-    <p>Redirecting to login page in <span id="seconds"></span> seconds</p>
+    <p><span id="userName"></span> is already logged in</p>
+    <p>Redirecting to login page in <span id="seconds">5</span> seconds</p>
 </body>
 </html>
