working on cart

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
@@ -109,14 +109,13 @@
                         <h1 class="text-center">item list</h1>
                         <table class="table" id="itemTable">
                             <thead>
-                                <tr>
+                                <tr id ="itemTableRowHeader">
                                     <th scope="col">Item ID</th>
-                                    <th scope="col">Item name</th>
-                                    <th scope="col">price</th>
-
+                                    <th id="itemNameCol" scope="col">Item name</th>
+                                    <th id="priceCol"  scope="col">price</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id ="itemTableBody">
                             </tbody>
                         </table>
                 </div>
