starting discount window

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
@@ -11,6 +11,8 @@
     <script src="../../../../common/jquery-ui.js"></script>
 
     <script src="placeOrder.js"></script>
+    <script src="order/order.js"></script>
+    <script src="order/item.js"></script>
     <link rel="stylesheet" href="../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../../common/fontawesome-free-5.15.1-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="../../../../common/navBar.css">
