--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/approveOrder/approveOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/approveOrder/approveOrder.html
@@ -7,6 +7,7 @@
     <script src="../../../../../common/jquery-2.0.3.min.js"></script>
     <script src="../../../../../common/context-path-helper.js"></script>
     <script src="../../../../../common/jquery-ui.js"></script>
+    <script src="approveOrder.js"></script>
     <link rel="stylesheet" href="../../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../../../common/jquery-ui-1.12.1.custom/jquery-ui.css">
     <link rel="stylesheet" href="../../../../../common/fontawesome-free-5.15.1-web/css/fontawesome.css">
@@ -25,9 +26,10 @@
             <div class="row">
                 <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
-                    <!-- Shopping cart table -->
+                    <!-- stores table -->
                     <div class="table-responsive">
-                        <table class="table">
+                        <h3 class="font-italic mb-4 text-center" >Click on the store name to see items</h3>
+                        <table class="table " id ="storeTable">
                             <thead>
                             <tr>
                                 <th scope="col" class="border-0 bg-light">
@@ -108,7 +110,7 @@
             </div>
             <!--item section-->
             <div class="row py-5 p-4 bg-white rounded shadow-sm">
-                <table class="table">
+                <table class="table" id ="itemsTable">
                     <thead>
                     <tr>
                         <th scope="col" class="border-0 bg-light">
@@ -131,7 +133,7 @@
                         </th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody >
                     <tr>
                         <th scope="row">
                             <div class="p-2">
@@ -187,7 +189,7 @@
                         <td class="align-middle">20</td>
                         <td class="align-middle">10</td>
                     </tr>
-                    </tbody>
+                    </tbody >
                 </table>
 
             </div>
@@ -198,10 +200,10 @@
                     <div class="p-4">
                         <p class="font-italic mb-4">Shipping and additional costs are calculated based on values you have entered.</p>
                         <ul class="list-unstyled mb-4">
-                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Order Subtotal </strong><strong>$390.00</strong></li>
-                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Shipping total</strong><strong>$10.00</strong></li>
+                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Items total cost </strong><strong id="Order-Subtotal"></strong></li>
+                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Shipping total</strong><strong id = "Shipping-total"></strong></li>
                             <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong>
-                                <h5 class="font-weight-bold">$400.00</h5>
+                                <h5 class="font-weight-bold" id="total"></h5>
                             </li>
                         </ul><a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Approve <order></order></a>
                     </div>
